--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -78,7 +78,7 @@ client:
 initJob:
   enabled: true
 # Database Configuration (PostgreSQL)
-postgres:
+postgresql:
   # --  Configuration of built-in postgresql database. If 'enabled: true', a postgresql instance will be deployed, otherwise, an external database must be provided in database.default value
   enabled: true
   auth:
