--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -89,12 +89,12 @@ postgresql:
     # -- The name of the database to be created and used by Rucio
     database: rucio
 
-  image:
-    repository: "postgres"
-    tag: "14"
-  persistence:
-    enabled: true
-    size: 5Gi
+  #image:
+  #  repository: "postgres"
+  #  tag: "14"
+  #persistence:
+  #  enabled: true
+  #  size: 5Gi
 
 # Storage Elements (RSE) Configuration
 bootstrap:
