--- a/rucio-xlzd/Chart.yaml
+++ b/rucio-xlzd/Chart.yaml
@@ -25,5 +25,6 @@ appVersion: "1.16.0"
 
 dependencies:
   - name: postgresql
-    version: "0.1.0"
-    repository: "file://charts/postgresql"
+    repository: "https://charts.bitnami.com/bitnami"
+    version: "14.2.4"
+    condition: postgresql.enabled
