certificate file changes

--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -30,6 +30,8 @@ type: Opaque
 data:
   hostcert.pem: {{ (.Files.Get "certificates/hostcert.pem") | b64enc }}
   hostkey.pem: {{ (.Files.Get "certificates/hostkey.pem") | b64enc }}
+  ca.pem: {{ (.Files.Get "certificates/ca.cert.pem") | b64enc }}
+
 
 ---
 # Secret for the Rucio Client's x509 certificate and key
