--- a/rucio-xlzd/templates/deployment.yaml
+++ b/rucio-xlzd/templates/deployment.yaml
@@ -16,6 +16,9 @@ spec:
         - name: rucio-config-volume
           configMap:
             name: rucio-config
+        {{- with .Values.rucio.server.extraVolumes }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
 
       containers:
         - name: rucio-server
@@ -31,6 +34,9 @@ spec:
             - name: rucio-config-volume
               mountPath: /opt/rucio/etc/rucio.cfg
               subPath: rucio.cfg
+            {{- with .Values.rucio.server.extraVolumeMounts }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
 
           # This comprehensive set of environment variables should allow the
           # internal startup script to generate the correct HTTPS/X.509 config.
