--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -16,7 +16,7 @@ type: Opaque
 data:
   hostcert.pem: {{ (.Files.Get "certificates/hostcert.pem") | b64enc }}
   hostkey.pem: {{ (.Files.Get "certificates/hostkey.pem") | b64enc }}
-  ca.pem: {{ (.Files.Get "certificates/ca.cert.pem") | b64enc }}
+  ca.pem: {{ (.Files.Get "certificates/ca.pem") | b64enc }} # ca.cert.pem
   953d6fb9.0: {{ (.Files.Get "certificates/953d6fb9.0") | b64enc }}  
 
 
