--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -33,6 +33,8 @@ type: Opaque
 data:
   usercert.pem: {{ (.Files.Get "certificates/usercert.pem") | b64enc }}
   userkey.pem: {{ (.Files.Get "certificates/userkey.pem") | b64enc }}
+  ca.cert.pem: {{ (.Files.Get "certificates/ca.pem") | b64enc }} # ca.cert.pem
+
 
   # TODO: OIDC sercrets in chart
 
