--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -73,11 +73,11 @@ client:
     account: "root"
     
   # -- Security settings for the client, including the user certificate
-  #security:
+  security:
     # -- The name of the Kubernetes secret containing the user's X.509 cert and key
     # -- You must create this secret manually before deploying.
     # -- Example: kubectl create secret generic rucio-client-x509-secret --from-file=usercert.pem=/path/to/your/usercert.pem --from-file=userkey.pem=/path/to/your/userkey.pem
-    #userSecretName: "rucio-client-x509-secret"
+    userSecretName: "rucio-client-x509-secret"
   extraVolumes:
     - name: ca-certs-volume
       secret:
