Split certificates and include hashed

--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -7,7 +7,7 @@ data:
   db-password: {{ .Values.rucio.server.db_password | b64enc }}
 
 ---
-# Secret for the Rucio Server's host certificate and key
+# Secret for the Rucio Server's host certificate and key ONLY
 apiVersion: v1
 kind: Secret
 metadata:
@@ -16,15 +16,9 @@ type: Opaque
 data:
   hostcert.pem: {{ (.Files.Get "certificates/hostcert.pem") | b64enc }}
   hostkey.pem: {{ (.Files.Get "certificates/hostkey.pem") | b64enc }}
-  ca.pem: {{ (.Files.Get "certificates/ca.pem") | b64enc }} # ca.cert.pem
-  953d6fb9.0: {{ (.Files.Get "certificates/953d6fb9.0") | b64enc }}  
-
 
 ---
-# Secret for the Rucio Client's x509 certificate and key
-# Note: Your describe output didn't show this as missing,
-# but your history shows you created it. It's good practice
-# to manage it here as well.
+# Secret for the Rucio Client's x509 certificate and key ONLY
 apiVersion: v1
 kind: Secret
 metadata:
@@ -33,8 +27,19 @@ type: Opaque
 data:
   usercert.pem: {{ (.Files.Get "certificates/usercert.pem") | b64enc }}
   userkey.pem: {{ (.Files.Get "certificates/userkey.pem") | b64enc }}
-  ca.cert.pem: {{ (.Files.Get "certificates/ca.pem") | b64enc }} # ca.cert.pem
+
+---
+# OPTIONAL: If you want Helm to manage the CA secret automatically
+# Secret for the CA certificate and its hash link
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rucio-ca-secret
+type: Opaque
+data:
+  ca.pem: {{ (.Files.Get "certificates/ca.pem") | b64enc }}
+  209843b3.0: {{ (.Files.Get "certificates/209843b3.0") | b64enc }}
 
 
-  # TODO: OIDC sercrets in chart
 
+  # TODO: OIDS secrets in chart
