psycopg with postgres

--- a/rucio-xlzd/templates/configmap.yaml
+++ b/rucio-xlzd/templates/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   rucio.cfg: |  
     [database]
-    default = postgresql://{{ .Values.rucio.server.db_user }}:{{ .Values.rucio.server.db_password }}@{{ .Values.rucio.server.db_host }}/{{ .Values.rucio.server.db_name }}
+    default = postgresql+psycopg://{{ .Values.rucio.server.db_user }}:{{ .Values.rucio.server.db_password }}@{{ .Values.rucio.server.db_host }}/{{ .Values.rucio.server.db_name }}
 
     [fts3]
     default = {{ .Values.rucio.server.fts_host }}
