remove persistence for testing

--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -117,7 +117,7 @@ postgresql:
   #  repository: "postgres"
   #  tag: "14"
   persistence:
-    enabled: true
+    enabled: false
   #  size: 5Gi
 
 # Storage Elements (RSE) Configuration
