--- a/rucio-xlzd/templates/init-pod.yaml
+++ b/rucio-xlzd/templates/init-pod.yaml
@@ -2,24 +2,47 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  # The name includes the Helm release name to be unique
-  name: {{ .Release.Name }}-rucio-init-job
+  name: {{ .Release.Name }}-rucio-db-init-job
   labels:
-    app: rucio-init-job
+    app: rucio-db-init-job
+  annotations:
+    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   template:
     metadata:
       labels:
-        app: rucio-init-job
+        app: rucio-db-init-job
     spec:
-      restartPolicy: Never
+      restartPolicy: OnFailure
+      
+      initContainers:
+        - name: wait-for-db
+          image: busybox:1.36
+          imagePullPolicy: IfNotPresent
+          command: ['sh', '-c']
+          args:
+            - |
+              set -ex
+              DB_HOST="{{ .Values.rucio.server.db_host }}"
+              # The port check requires an explicit port number.
+              DB_PORT="5432"
+              
+              echo "Waiting for database at ${DB_HOST}:${DB_PORT}..."
+              until nc -z -w 5 "${DB_HOST}" "${DB_PORT}"; do
+                echo "Database is not ready yet. Retrying in 5 seconds..."
+                sleep 5
+              done
+              echo "Database is ready."
+
       containers:
-        - name: init
+        - name: db-init
           image: rucio/rucio-init:latest
           imagePullPolicy: Always
           env:
             - name: RUCIO_CFG_DATABASE_DEFAULT
-              value: "postgresql+psycopg://{{ .Values.postgresql.auth.username }}:{{ .Values.postgresql.auth.password }}@{{ .Values.rucio.server.db_host }}:5432/{{ .Values.postgresql.auth.database }}"
+              value: "postgresql+psycopg://{{ .Values.postgresql.auth.username }}:{{ .Values.postgresql.auth.password }}@{{ .Values.rucio.server.db_host }}/{{ .Values.postgresql.auth.database }}"
             - name: RUCIO_CFG_BOOTSTRAP_USERPASS_IDENTITY
               value: "rucio"
             - name: RUCIO_CFG_BOOTSTRAP_USERPASS_PWD
