--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -101,6 +101,8 @@ client:
 
 initJob:
   enabled: true
+bootstrapIdentity:
+  enabled: true
 # Database Configuration (PostgreSQL)
 postgresql:
   # --  Configuration of built-in postgresql database. If 'enabled: true', a postgresql instance will be deployed, otherwise, an external database must be provided in database.default value
