--- a/rucio-xlzd/templates/init-pod.yaml
+++ b/rucio-xlzd/templates/init-pod.yaml
@@ -16,7 +16,6 @@ spec:
         app: rucio-db-init-job
     spec:
       restartPolicy: OnFailure
-      
       initContainers:
         - name: wait-for-db
           image: busybox:1.36
@@ -26,13 +25,18 @@ spec:
             - |
               set -ex
               DB_HOST="{{ .Values.rucio.server.db_host }}"
-              # The port check requires an explicit port number.
               DB_PORT="5432"
               
               echo "Waiting for database at ${DB_HOST}:${DB_PORT}..."
+              counter=0
+              # Increased the loop limit from 12 to 36 (3 minute timeout)
               until nc -z -w 5 "${DB_HOST}" "${DB_PORT}"; do
-                echo "Database is not ready yet. Retrying in 5 seconds..."
                 sleep 5
+                counter=$((counter+1))
+                if [ $counter -ge 36 ]; then
+                  echo "Error: Timeout waiting for database."
+                  exit 1
+                fi
               done
               echo "Database is ready."
 
