--- a/rucio-xlzd/templates/configmap.yaml
+++ b/rucio-xlzd/templates/configmap.yaml
@@ -3,9 +3,40 @@ kind: ConfigMap
 metadata:
   name: rucio-config
 data:
-  rucio.cfg: |  
-    [database]
-    default = postgresql+psycopg://{{ .Values.rucio.server.db_user }}:{{ .Values.rucio.server.db_password }}@{{ .Values.rucio.server.db_host }}/{{ .Values.rucio.server.db_name }}
+  rucio.cfg: |
+    [common]
+    logdir = /var/log/rucio/
+    loglevel = {{ .Values.rucio.server.loglevel | default "DEBUG" }}
 
-    [fts3]
-    default = {{ .Values.rucio.server.fts_host }}
+    [database]
+    default = postgresql://{{ .Values.rucio.server.db_user }}:{{ .Values.rucio.server.db_password }}@{{ .Values.rucio.server.db_host }}/{{ .Values.rucio.server.db_name }}
+
+
+    [client]
+    rucio_host = {{ .Values.rucio.server.host }}
+    auth_host = {{ .Values.rucio.server.host }}
+    auth_type = x509
+    account = {{ .Values.client.config.account }}
+    client_cert = /etc/grid-security/hostcert.pem
+    client_key = /etc/grid-security/hostkey.pem
+    ca_cert = /etc/grid-security/ca.pem
+
+    [messaging-hermes]
+    email_from = rucio@example.com
+
+    [trace]
+    # Default trace configuration.
+    tracedir = /var/log/rucio/trace
+    
+    [policy]
+    permission = generic
+    schema = generic
+    lfn2pfn_algorithm_default = hash
+    support = https://github.com/rucio/rucio/issues/
+
+    [permission]
+    default = generic
+    schema = generic
+
+    [conveyor]
+    fts_servers = {{ .Values.rucio.server.fts_host }}
